registry/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: registry
  namespace: openshift-image-registry
spec:
  host: registry.router.172.17.0.3.nip.io
  to:
    kind: Service
    name: image-registry
  port:
    targetPort: 5000-tcp
  tls:
    termination: reencrypt
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDujCCAqKgAwIBAgIJANM55JojvcsBMA0GCSqGSIb3DQEBCwUAMHIxCzAJBgNV
[...]
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpAIBAAKCAQEAr0rQnxEpIzDO7R5bRwQP2g5MckwjEL9JeEiL9ZVK/8HAdxkn
[...]
      vM3WPGLp/rN/KOlfOu/mC7kvsj+N8o3eDvWc1f6Eex4gspwOtdgZYQ==
      -----END RSA PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
